# pycodesearch

./: .gitignore  README.md  makefile  pyproject.toml  tox.ini
pycodesearch/: __init__.py  cli.py  types.py
pysearch/: __init__.py  __main__.py  cli.py
search/: __main__.py
test/: test_cli.py
