[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysearch"
authors = [{name = "Samuel Stevens", email = "samuel.robert.stevens@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/samuelstevens/pysearch"

[project.scripts]
pysearch = "pysearch:main"
