[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycodesearch"
authors = [{name = "Samuel Stevens", email = "samuel.robert.stevens@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.6,<4"
dependencies = [
  "typing_extensions >=4.0",
]

[project.urls]
Home = "https://github.com/samuelstevens/pycodesearch"

[project.scripts]
pycodesearch = "pycodesearch:main"

[tool.isort]
profile = "black"
